@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.58 2005/01/31 07:21:52 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.59 2005/02/01 07:22:52 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  1 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Changed tty8 output to a fifo.
 
   31 Jan 2005; Preston Cody <codeman@gentoo.org>
   more updates to TODO list.  hopefully we'll soon start removing items instead
